--- a/css/style.css
+++ b/css/style.css
@@ -53,92 +53,148 @@ body {
           body #wrapper #header .nav .li-item:hover {
             background-color: #ffc966;
             transition: 0.3s; }
-      /* line 53, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #wrapper #header .form-control {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around; }
-        /* line 58, C:/wamp64/www/prove-eksamen/css/style.scss */
-        body #wrapper #header .form-control .username {
-          text-align: center;
-          flex-grow: 1;
-          border: 2px solid #996300;
-          box-shadow: inset 0 0 10px black;
-          line-height: 50px; }
-        /* line 65, C:/wamp64/www/prove-eksamen/css/style.scss */
-        body #wrapper #header .form-control .password {
-          text-align: center;
-          flex-grow: 1;
-          border-radius: 5%;
-          border: 2px solid #996300;
-          box-shadow: inset 0 0 10px black;
-          line-height: 50px; }
-        /* line 73, C:/wamp64/www/prove-eksamen/css/style.scss */
-        body #wrapper #header .form-control .submit {
-          text-align: center;
-          flex-grow: 1;
-          border: 2px solid #996300;
-          box-shadow: inset 0 0 10px black;
-          line-height: 50px; }
-  /* line 83, C:/wamp64/www/prove-eksamen/css/style.scss */
-  body .filter-control {
-    flex-grow: 1;
-    display: inline-block;
-    flex-wrap: wrap;
-    text-align: center;
-    margin: 0;
-    align-items: center;
-    top: 60%;
-    justify-content: space-around;
-    line-height: 50px; }
-  /* line 94, C:/wamp64/www/prove-eksamen/css/style.scss */
-  body .articels {
-    display: inline-flex;
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: space-around; }
-    /* line 99, C:/wamp64/www/prove-eksamen/css/style.scss */
-    body .articels .articel {
-      text-align: center;
-      flex-grow: 1; }
-  /* line 104, C:/wamp64/www/prove-eksamen/css/style.scss */
-  body #main {
-    width: 100%;
-    height: 700px;
-    margin-top: 20px; }
-    /* line 108, C:/wamp64/www/prove-eksamen/css/style.scss */
-    body #main .form-control {
+    /* line 54, C:/wamp64/www/prove-eksamen/css/style.scss */
+    body #wrapper .form-control {
       width: 100%;
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-around; }
-      /* line 112, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #main .form-control .seach {
+      /* line 59, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper .form-control .username {
         text-align: center;
-        width: 40%;
-        margin-left: 3%;
-        margin-right: 11%;
+        flex-grow: 1;
+        border: 2px solid #996300;
+        box-shadow: inset 0 0 10px black;
+        line-height: 50px; }
+      /* line 66, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper .form-control .password {
+        text-align: center;
+        flex-grow: 1;
         border-radius: 5%;
         border: 2px solid #996300;
         box-shadow: inset 0 0 10px black;
         line-height: 50px; }
-      /* line 122, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #main .form-control .filter {
+      /* line 74, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper .form-control .submit {
+        text-align: center;
+        flex-grow: 1;
+        background-color: orange;
+        transition: 0.3s;
+        border: 2px solid #996300;
+        box-shadow: inset 0 0 10px black;
+        line-height: 50px; }
+        /* line 82, C:/wamp64/www/prove-eksamen/css/style.scss */
+        body #wrapper .form-control .submit:hover {
+          transition: 0.3s;
+          background-color: #ffb733; }
+    /* line 88, C:/wamp64/www/prove-eksamen/css/style.scss */
+    body #wrapper .form-control {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around; }
+      /* line 93, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper .form-control .username {
         text-align: center;
         flex-grow: 1;
         border: 2px solid #996300;
         box-shadow: inset 0 0 10px black;
         line-height: 50px; }
-    /* line 130, C:/wamp64/www/prove-eksamen/css/style.scss */
-    body #main .classes-checkboxes-form {
-      display: flex;
-      flex-wrap: wrap;
-      flex-grow: 1;
-      text-align: center;
-      justify-content: space-around; }
-      /* line 136, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #main .classes-checkboxes-form .classes-checkboxes {
+      /* line 100, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper .form-control .password {
+        text-align: center;
         flex-grow: 1;
-        font-size: 2rem; }
+        border-radius: 5%;
+        border: 2px solid #996300;
+        box-shadow: inset 0 0 10px black;
+        line-height: 50px; }
+      /* line 108, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper .form-control .submit {
+        text-align: center;
+        flex-grow: 1;
+        background-color: orange;
+        transition: 0.3s;
+        border: 2px solid #996300;
+        box-shadow: inset 0 0 10px black;
+        line-height: 50px; }
+        /* line 116, C:/wamp64/www/prove-eksamen/css/style.scss */
+        body #wrapper .form-control .submit:hover {
+          transition: 0.3s;
+          background-color: #ffb733; }
+    /* line 122, C:/wamp64/www/prove-eksamen/css/style.scss */
+    body #wrapper .filter-control {
+      flex-grow: 1;
+      display: inline-block;
+      flex-wrap: wrap;
+      text-align: center;
+      margin: 0;
+      align-items: center;
+      top: 60%;
+      justify-content: space-around;
+      line-height: 50px; }
+    /* line 133, C:/wamp64/www/prove-eksamen/css/style.scss */
+    body #wrapper .articels {
+      display: inline-flex;
+      width: 100%;
+      flex-wrap: wrap;
+      justify-content: space-around; }
+      /* line 138, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper .articels .articel {
+        text-align: center;
+        flex-grow: 1; }
+    /* line 143, C:/wamp64/www/prove-eksamen/css/style.scss */
+    body #wrapper #main {
+      width: 100%;
+      height: 700px;
+      margin-top: 20px; }
+      /* line 147, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper #main .form-control {
+        width: 100%;
+        display: flex;
+        justify-content: space-around; }
+        /* line 151, C:/wamp64/www/prove-eksamen/css/style.scss */
+        body #wrapper #main .form-control .seach {
+          text-align: center;
+          width: 40%;
+          margin-left: 3%;
+          margin-right: 11%;
+          border-radius: 5%;
+          border: 2px solid #996300;
+          box-shadow: inset 0 0 10px black;
+          line-height: 50px; }
+        /* line 161, C:/wamp64/www/prove-eksamen/css/style.scss */
+        body #wrapper #main .form-control .filter {
+          text-align: center;
+          flex-grow: 1;
+          transition: 0.3s;
+          background-color: orange;
+          border: 2px solid #996300;
+          box-shadow: inset 0 0 10px black;
+          line-height: 50px; }
+          /* line 169, C:/wamp64/www/prove-eksamen/css/style.scss */
+          body #wrapper #main .form-control .filter:hover {
+            transition: 0.3s;
+            background-color: #ffb733; }
+      /* line 175, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper #main .classes-checkboxes-form {
+        display: flex;
+        flex-wrap: wrap;
+        flex-grow: 1;
+        text-align: center;
+        justify-content: space-around; }
+        /* line 181, C:/wamp64/www/prove-eksamen/css/style.scss */
+        body #wrapper #main .classes-checkboxes-form .classes-checkboxes {
+          flex-grow: 1;
+          font-size: 2rem; }
+  /* line 188, C:/wamp64/www/prove-eksamen/css/style.scss */
+  body #footer {
+    background-color: #ffb733;
+    height: 200px;
+    width: 100%; }
+  /* line 193, C:/wamp64/www/prove-eksamen/css/style.scss */
+  body .footer-left {
+    width: 33%;
+    flex-wrap: wrap;
+    display: flex; }
 
 /*# sourceMappingURL=style.css.map */
