--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,22 @@
-/* line 1, C:/wamp64/www/prove-eksamen/css/style.scss */
-* {
-  font-family: 'Pacifico', cursive; }
-
-/* line 5, C:/wamp64/www/prove-eksamen/css/style.scss */
+/* line 3, C:/wamp64/www/prove-eksamen/css/style.scss */
 body {
   width: 100%;
   background-color: #e69500;
   height: 100%; }
-  /* line 9, C:/wamp64/www/prove-eksamen/css/style.scss */
+  /* line 7, C:/wamp64/www/prove-eksamen/css/style.scss */
+  body .really {
+    background-color: red; }
+  /* line 10, C:/wamp64/www/prove-eksamen/css/style.scss */
+  body .realy {
+    color: red; }
+  /* line 13, C:/wamp64/www/prove-eksamen/css/style.scss */
   body #wrapper {
     width: 100%;
     height: 100%; }
-    /* line 12, C:/wamp64/www/prove-eksamen/css/style.scss */
+    /* line 16, C:/wamp64/www/prove-eksamen/css/style.scss */
     body #wrapper #header {
       width: 100%; }
-      /* line 14, C:/wamp64/www/prove-eksamen/css/style.scss */
+      /* line 18, C:/wamp64/www/prove-eksamen/css/style.scss */
       body #wrapper #header .header-bg {
         margin-top: 1%;
         background: url(HearthStone_Logo_2016_m011.png);
@@ -23,18 +25,18 @@ body {
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center; }
-        /* line 22, C:/wamp64/www/prove-eksamen/css/style.scss */
+        /* line 26, C:/wamp64/www/prove-eksamen/css/style.scss */
         body #wrapper #header .header-bg .title {
           text-align: center;
           color: darkorange; }
-      /* line 27, C:/wamp64/www/prove-eksamen/css/style.scss */
+      /* line 31, C:/wamp64/www/prove-eksamen/css/style.scss */
       body #wrapper #header .nav {
         display: flex;
         width: 100%;
         flex-wrap: wrap;
         justify-content: space-around;
         line-height: 50px; }
-        /* line 33, C:/wamp64/www/prove-eksamen/css/style.scss */
+        /* line 37, C:/wamp64/www/prove-eksamen/css/style.scss */
         body #wrapper #header .nav .li-item {
           list-style: none;
           width: 30%;
@@ -44,70 +46,37 @@ body {
           border: 2px solid #ffb733;
           box-shadow: 2px 2px 2px 2px #4d4d4d;
           text-align: center; }
-          /* line 42, C:/wamp64/www/prove-eksamen/css/style.scss */
+          /* line 46, C:/wamp64/www/prove-eksamen/css/style.scss */
           body #wrapper #header .nav .li-item a {
             color: black;
             text-decoration: none; }
-          /* line 46, C:/wamp64/www/prove-eksamen/css/style.scss */
+          /* line 50, C:/wamp64/www/prove-eksamen/css/style.scss */
           body #wrapper #header .nav .li-item:hover {
             background-color: #ffc966;
             transition: 0.3s; }
-    /* line 53, C:/wamp64/www/prove-eksamen/css/style.scss */
+    /* line 57, C:/wamp64/www/prove-eksamen/css/style.scss */
     body #wrapper .form-control {
       width: 100%;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around; }
-      /* line 58, C:/wamp64/www/prove-eksamen/css/style.scss */
+      /* line 62, C:/wamp64/www/prove-eksamen/css/style.scss */
       body #wrapper .form-control .username {
-        text-align: center;
         flex-grow: 1;
+        text-align: center;
         border: 2px solid #996300;
         box-shadow: inset 0 0 10px black;
         line-height: 50px; }
-      /* line 65, C:/wamp64/www/prove-eksamen/css/style.scss */
+      /* line 69, C:/wamp64/www/prove-eksamen/css/style.scss */
       body #wrapper .form-control .password {
         text-align: center;
-        flex-grow: 1;
+        width: 40%;
+        margin: 0 3%;
         border-radius: 5%;
         border: 2px solid #996300;
         box-shadow: inset 0 0 10px black;
         line-height: 50px; }
-      /* line 73, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #wrapper .form-control .submit {
-        text-align: center;
-        flex-grow: 2;
-        background-color: orange;
-        transition: 0.3s;
-        border: 2px solid #996300;
-        box-shadow: inset 0 0 10px black;
-        line-height: 50px; }
-        /* line 81, C:/wamp64/www/prove-eksamen/css/style.scss */
-        body #wrapper .form-control .submit:hover {
-          transition: 0.3s;
-          background-color: #ffb733; }
-    /* line 87, C:/wamp64/www/prove-eksamen/css/style.scss */
-    body #wrapper .form-control {
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around; }
-      /* line 92, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #wrapper .form-control .username {
-        text-align: center;
-        flex-grow: 1;
-        border: 2px solid #996300;
-        box-shadow: inset 0 0 10px black;
-        line-height: 50px; }
-      /* line 99, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #wrapper .form-control .password {
-        text-align: center;
-        flex-grow: 1;
-        border-radius: 5%;
-        border: 2px solid #996300;
-        box-shadow: inset 0 0 10px black;
-        line-height: 50px; }
-      /* line 107, C:/wamp64/www/prove-eksamen/css/style.scss */
+      /* line 78, C:/wamp64/www/prove-eksamen/css/style.scss */
       body #wrapper .form-control .submit {
         text-align: center;
         flex-grow: 1;
@@ -116,11 +85,40 @@ body {
         border: 2px solid #996300;
         box-shadow: inset 0 0 10px black;
         line-height: 50px; }
-        /* line 115, C:/wamp64/www/prove-eksamen/css/style.scss */
+        /* line 86, C:/wamp64/www/prove-eksamen/css/style.scss */
         body #wrapper .form-control .submit:hover {
           transition: 0.3s;
           background-color: #ffb733; }
-    /* line 121, C:/wamp64/www/prove-eksamen/css/style.scss */
+    /* line 93, C:/wamp64/www/prove-eksamen/css/style.scss */
+    body #wrapper .upload .username {
+      text-align: center;
+      margin: 0 3%;
+      border: 2px solid #996300;
+      box-shadow: inset 0 0 10px black;
+      line-height: 70px; }
+    /* line 100, C:/wamp64/www/prove-eksamen/css/style.scss */
+    body #wrapper .upload .password {
+      text-align: center;
+      flex-grow: 1;
+      border-radius: 5%;
+      border: 2px solid #996300;
+      box-shadow: inset 0 0 10px black;
+      line-height: 50px; }
+    /* line 108, C:/wamp64/www/prove-eksamen/css/style.scss */
+    body #wrapper .upload .submit {
+      text-align: center;
+      width: 40%;
+      margin: 0 3%;
+      background-color: orange;
+      transition: 0.3s;
+      border: 2px solid #996300;
+      box-shadow: inset 0 0 10px black;
+      line-height: 70px; }
+      /* line 117, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper .upload .submit:hover {
+        transition: 0.3s;
+        background-color: #ffb733; }
+    /* line 123, C:/wamp64/www/prove-eksamen/css/style.scss */
     body #wrapper .filter-control {
       flex-grow: 1;
       display: inline-block;
@@ -131,40 +129,46 @@ body {
       top: 60%;
       justify-content: space-around;
       line-height: 50px; }
-    /* line 132, C:/wamp64/www/prove-eksamen/css/style.scss */
+    /* line 134, C:/wamp64/www/prove-eksamen/css/style.scss */
     body #wrapper .articels {
       display: flex;
       width: 100%;
       flex-wrap: wrap;
       justify-content: space-around; }
-      /* line 137, C:/wamp64/www/prove-eksamen/css/style.scss */
+      /* line 139, C:/wamp64/www/prove-eksamen/css/style.scss */
+      body #wrapper .articels hr.style14 {
+        border: 0;
+        height: 1px;
+        background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+        background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+        background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+        background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); }
+      /* line 147, C:/wamp64/www/prove-eksamen/css/style.scss */
       body #wrapper .articels .articel {
         text-align: center;
         border: 2px solid grey;
         margin: 0 20px;
         justify-content: space-between;
         flex-grow: 1; }
-    /* line 145, C:/wamp64/www/prove-eksamen/css/style.scss */
+    /* line 155, C:/wamp64/www/prove-eksamen/css/style.scss */
     body #wrapper #main {
       width: 100%;
       margin-bottom: 70px;
       margin-top: 20px; }
-      /* line 149, C:/wamp64/www/prove-eksamen/css/style.scss */
+      /* line 159, C:/wamp64/www/prove-eksamen/css/style.scss */
       body #wrapper #main .form-control {
         width: 100%;
         display: flex;
         justify-content: space-around; }
-        /* line 153, C:/wamp64/www/prove-eksamen/css/style.scss */
+        /* line 163, C:/wamp64/www/prove-eksamen/css/style.scss */
         body #wrapper #main .form-control .seach {
           text-align: center;
-          width: 40%;
-          margin-left: 3%;
-          margin-right: 11%;
           border-radius: 5%;
+          flex-grow: 1;
           border: 2px solid #996300;
           box-shadow: inset 0 0 10px black;
           line-height: 50px; }
-        /* line 163, C:/wamp64/www/prove-eksamen/css/style.scss */
+        /* line 171, C:/wamp64/www/prove-eksamen/css/style.scss */
         body #wrapper #main .form-control .filter {
           text-align: center;
           flex-grow: 1;
@@ -173,44 +177,57 @@ body {
           border: 2px solid #996300;
           box-shadow: inset 0 0 10px black;
           line-height: 50px; }
-          /* line 171, C:/wamp64/www/prove-eksamen/css/style.scss */
+          /* line 179, C:/wamp64/www/prove-eksamen/css/style.scss */
           body #wrapper #main .form-control .filter:hover {
             transition: 0.3s;
             background-color: #ffb733; }
-      /* line 177, C:/wamp64/www/prove-eksamen/css/style.scss */
+      /* line 185, C:/wamp64/www/prove-eksamen/css/style.scss */
       body #wrapper #main .classes-checkboxes-form {
         display: flex;
         flex-wrap: wrap;
         flex-grow: 1;
         text-align: center;
         justify-content: space-around; }
-        /* line 183, C:/wamp64/www/prove-eksamen/css/style.scss */
+        /* line 191, C:/wamp64/www/prove-eksamen/css/style.scss */
         body #wrapper #main .classes-checkboxes-form .classes-checkboxes {
           flex-grow: 1;
           font-size: 2rem; }
-  /* line 190, C:/wamp64/www/prove-eksamen/css/style.scss */
+  /* line 198, C:/wamp64/www/prove-eksamen/css/style.scss */
   body #footer {
     background-color: #ffb733;
     width: 100%; }
-  /* line 194, C:/wamp64/www/prove-eksamen/css/style.scss */
+  /* line 202, C:/wamp64/www/prove-eksamen/css/style.scss */
   body .footer-left {
     flex-wrap: wrap;
     flex-grow: 1;
     display: flex; }
 
-/* line 201, C:/wamp64/www/prove-eksamen/css/style.scss */
+/* line 209, C:/wamp64/www/prove-eksamen/css/style.scss */
 .articel-p {
   flex-grow: 1;
   font-family: 'Open Sans Condensed', sans-serif; }
 
-/* line 206, C:/wamp64/www/prove-eksamen/css/style.scss */
+/* line 214, C:/wamp64/www/prove-eksamen/css/style.scss */
 .articel-p:nth-last {
   flex-grow: 1;
   text-align: justify;
   font-family: 'Open Sans Condensed', sans-serif; }
 
-/* line 212, C:/wamp64/www/prove-eksamen/css/style.scss */
+/* line 220, C:/wamp64/www/prove-eksamen/css/style.scss */
 .articel-img {
   margin: 5px; }
+
+/* line 224, C:/wamp64/www/prove-eksamen/css/style.scss */
+.upload {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around; }
+
+/* line 232, C:/wamp64/www/prove-eksamen/css/style.scss */
+.label {
+  flex-grow: 1;
+  width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
