--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,15 @@
-        * {
-            font-family: 'Pacifico', cursive;
-        }
+        * {}
         
         body {
             width: 100%;
             background-color: darken(orange, 5%);
             height: 100%;
+            .really {
+                background-color: red;
+            }
+            .realy {
+                color: red;
+            }
             #wrapper {
                 width: 100%;
                 height: 100%;
@@ -56,15 +60,16 @@
                     flex-wrap: wrap;
                     justify-content: space-around;
                     .username {
-                        text-align: center;
                         flex-grow: 1;
+                        text-align: center;
                         border: 2px solid darken(orange, 20%);
                         box-shadow: inset 0 0 10px black;
                         line-height: 50px;
                     }
                     .password {
                         text-align: center;
-                        flex-grow: 1;
+                        width: 40%;
+                        margin: 0 3%;
                         border-radius: 5%;
                         border: 2px solid darken(orange, 20%);
                         box-shadow: inset 0 0 10px black;
@@ -72,7 +77,7 @@
                     }
                     .submit {
                         text-align: center;
-                        flex-grow: 2;
+                        flex-grow: 1;
                         background-color: orange;
                         transition: 0.3s;
                         border: 2px solid darken(orange, 20%);
@@ -84,17 +89,13 @@
                         }
                     }
                 }
-                .form-control {
-                    width: 100%;
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: space-around;
+                .upload {
                     .username {
                         text-align: center;
-                        flex-grow: 1;
+                        margin: 0 3%;
                         border: 2px solid darken(orange, 20%);
                         box-shadow: inset 0 0 10px black;
-                        line-height: 50px;
+                        line-height: 70px;
                     }
                     .password {
                         text-align: center;
@@ -106,12 +107,13 @@
                     }
                     .submit {
                         text-align: center;
-                        flex-grow: 1;
+                        width: 40%;
+                        margin: 0 3%;
                         background-color: orange;
                         transition: 0.3s;
                         border: 2px solid darken(orange, 20%);
                         box-shadow: inset 0 0 10px black;
-                        line-height: 50px;
+                        line-height: 70px;
                         &:hover {
                             transition: 0.3s;
                             background-color: lighten(orange, 10%);
@@ -134,6 +136,14 @@
                     width: 100%;
                     flex-wrap: wrap;
                     justify-content: space-around;
+                    hr.style14 {
+                        border: 0;
+                        height: 1px;
+                        background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+                        background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+                        background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+                        background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+                    }
                     .articel {
                         text-align: center;
                         border: 2px solid grey;
@@ -152,10 +162,8 @@
                         justify-content: space-around;
                         .seach {
                             text-align: center;
-                            width: 40%;
-                            margin-left: 3%;
-                            margin-right: 11%;
                             border-radius: 5%;
+                            flex-grow: 1;
                             border: 2px solid darken(orange, 20%);
                             box-shadow: inset 0 0 10px black;
                             line-height: 50px;
@@ -211,4 +219,17 @@
         
         .articel-img {
             margin: 5px;
+        }
+        
+        .upload {
+            display: flex;
+            width: 100%;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-around;
+        }
+        
+        .label {
+            flex-grow: 1;
+            width: 100%;
         }
